--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
   "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "nodemon index.js"
+  "start": "nodemon --ext js,njk,json --watch views --watch routes --watch data index.js"
 },
   "keywords": [],
   "author": "",
